<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- <include
             android:id="@+id/title_transportation"
             layout="@layout/tool_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="13.7dp"
            android:orientation="vertical">
            <!--android:paddingTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/backImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="19.5dp"
                    android:minHeight="8.1dp"
                    android:minWidth="4.6dp"
                    android:src="@drawable/back_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="48dp"
                    android:layout_marginRight="48dp"
                    android:layout_toLeftOf="@+id/backImageView"
                    android:layout_toStartOf="@+id/backImageView"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/add_new_user"
                    android:textColor="#74b32f"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </RelativeLayout>



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40.8dp"
                android:layout_marginRight="40.8dp"
                android:layout_marginTop="30dp">
                <!-- <android.support.v7.widget.CardView
                    android:id="@+id/cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardUseCompatPadding="false"
                    card_view:cardElevation="20dp"
                    card_view:cardBackgroundColor="?android:colorBackground"
                    card_view:cardCornerRadius="3dp">-->

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/new_edittext_shape"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minHeight="60dp"
                    android:paddingRight="7dp"
                    android:paddingTop="20dp"
                    android:textColor="#82bd41"
                    android:textColorHint="@color/lightgray" />

                <TextView
                    style="@style/registerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/username" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40.8dp"
                android:layout_marginRight="40.8dp"
                android:layout_marginTop="30dp">


                <LinearLayout
                    android:id="@+id/kind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/new_edittext_shape"
                    android:minHeight="60dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/girlLinear"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/girlTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginTop="7dp"
                            android:gravity="top"
                            android:paddingTop="5dp"
                            android:text="@string/kind_woman" />
                    </LinearLayout>

                    <!--<android.support.v4.widget.Space
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:layout_width="match_parent" />-->
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="20dp"
                        android:background="#ebebeb" />

                    <LinearLayout
                        android:id="@+id/manLinear"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/manTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginTop="7dp"
                            android:gravity="top"
                            android:paddingTop="5dp"
                            android:text="@string/man" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    style="@style/registerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/kind" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40.8dp"
                android:layout_marginRight="40.8dp"
                android:layout_marginTop="24.5dp">

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/new_edittext_shape"
                    android:ellipsize="start"
                    android:gravity="left"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:minHeight="60dp"
                    android:paddingLeft="7dp"
                    android:paddingTop="20dp"
                    android:textColor="#82bd41"
                    android:textColorHint="@color/lightgray" />

                <TextView
                    style="@style/registerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/age" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40.8dp"
                android:layout_marginRight="40.8dp"
                android:layout_marginTop="24.5dp">

                <EditText
                    android:id="@+id/job_title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/new_edittext_shape"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minHeight="60dp"
                    android:paddingRight="7dp"
                    android:paddingTop="20dp"
                    android:textColor="#82bd41"
                    android:textColorHint="@color/lightgray" />

                <TextView
                    style="@style/registerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/job_title" />

            </FrameLayout>



            <LinearLayout
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="wrap_content"
                    android:minWidth="94.6dp"
                    android:minHeight="64.6dp"
                    android:paddingTop="4dp"
                    android:background="@drawable/shape_button_login"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textColor="#FAFAFA" />



            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
